[tool.poetry]
name = "evernote-sdk-python3"
version = "0.1.0"
description = "evernote sdk for python3"
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
