[tool.poetry]
name = "evernote-sdk-python3"
version = "0.1.3"
description = "evernote sdk for python3"
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]
packages = [
    { include = "thrift", from = "lib"},
    { include = "evernote", from = "lib" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Viele
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
